# django-example-deploy

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.deploy.yaml  docker-compose.yaml  manage.py  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml
config/: settings.py  urls.py  views.py
config/tests/: test_views.py
users/: admin.py  models.py  user_manager.py
users/migrations/: 0001_create_custom_user_model.py
users/tests/: test_models.py
