[project]
name = "django-deploy-example"
version = "0.1.0"
description = ""
authors = [
    {name = "Vadim Meshcheryakov",email = "painassasin@icloud.com"}
]
requires-python = "~=3.13"
dependencies = [
    "django (>=6.0.7,<7.0.0)",
    "environs (>=15.0.1,<16.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
]

[tool.poetry]
package-mode=false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.22,<0.16.0)",
    "coverage (>=7.15.2,<8.0.0)",
    "typos (>=1.48.0,<2.0.0)"
]

[tool.ruff]
target-version = "py313"
line-length = 100
respect-gitignore = true

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = [
    "any-type",
    "missing-copyright-notice",
    "D",
    "DOC",
    "raw-string-in-exception",
    "missing-trailing-comma" ,
    "raise-vanilla-args",
]
select = ["ALL"]
preview = true

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = [
    "line-too-long",
    "mutable-class-default",
]
"*/tests/*" = [
    "missing-return-type-undocumented-public-function",
    "pytest-unittest-assertion",
    "pytest-unittest-raises-assertion",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.coverage.report]
omit = [
    "*/tests/*",
    "*/asgi.py",
    "*/wsgi.py",
    "manage.py",
]
show_missing = true
skip_covered = true